--- a/app/views/shared/_user_navigation.html.erb.erb
+++ b/app/views/shared/_user_navigation.html.erb.erb
@@ -1,4 +1,14 @@
-<div class="navigation">  
-  <a href="#"> Login </a> |
-  <a href="#"> Register </a>
+<div class="navigation">
+
+  <% if current_user %>
+    Hi <%= current_user.username %>   | <%= link_to "Logout", logout_url %>
+  <% else %>
+    <%=link_to "Login", login_url %> | <%= link_to "Register", new_user_url %>
+  <% end %>  
 </div>
+
+
+
+
+
+  
